fix position z-index

--- a/src/components/MobileNav/MobileNav.module.scss
+++ b/src/components/MobileNav/MobileNav.module.scss
@@ -5,6 +5,7 @@
   top: 100px;
   left: 0;
   width: 100%;
+  z-index: $i-modal;
 }
 
 .list {
