--- a/src/layout/Footer/Footer.module.scss
+++ b/src/layout/Footer/Footer.module.scss
@@ -3,6 +3,7 @@
 footer {
   @include container(padding);
   position: fixed;
+  z-index: $i-footer;
   bottom: 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
